# genresinspace.github.io

./: .cursorignore  .gitignore  CONTRIBUTING.md  Cargo.toml  GRAPH_TODOS.md  README.md  colours.tsx  eval_core.py  shell.nix  sweep_layout.sh  visualize_layout.py
.cursor/: rules
.github/workflows/: ci-deploy.yml  ci.yml  deploy.yml
assets/: icon.html
datagen/: Cargo.toml
datagen/src/: check_mixes.rs  color_propagation.rs  data_patches.rs  extract.rs  force_layout.rs  frontend_types.rs  genre_top_artists.rs  lib.rs  link_counts.rs  links.rs  main.rs  output.rs  populate_mixes.rs  process.rs  types.rs
frontend_wasm/: Cargo.toml  README.md
frontend_wasm/src/: lib.rs  search.rs
mixes/: 2-step garage  A cappella  Acid (electronic music)  Acid house  Acid jazz  Acid rock  Acid techno  Acid trance  Acoustic music  Adult album alternative  Adult contemporary music  African blues  African heavy metal  African hip-hop  African hip-hop#Street pop  Afro fusion  Afro house  Afro tech  Afro-Caribbean music  Afro-Cuban jazz  Afro-punk  Afro-soul  Afrobeat  Afrobeats  Afroswing  Afro⧸cosmic music  Ahidus  Ahwash  Aita (Morocco)  Akishibu-kei  Al Jeel  Al jeel  Alaskan hip-hop  Albanian iso-polyphony  Alpine folk music  Alternative R&B  Alternative country  Alternative dance  Alternative hip-hop  Alternative metal  (+1274 more)
scripts/: download_dump.fish  download_dump.ps1
shared/: Cargo.toml
shared/src/: lib.rs
simplified_wikitext/: Cargo.toml
simplified_wikitext/src/: lib.rs
src/: data_patches.rs  extract.rs  links.rs  main.rs  output.rs  populate_mixes.rs  preparation.rs  process.rs  types.rs  util.rs
website/: .prettierignore  README.md  data.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
website/public/: CNAME  data.json  links_to_page_ids.json
website/public/artists/: +44 (band).json  0.json  10,000 Maniacs.json  100 gecs.json  1002.json  1006.json  1007.json  1008.json  1009.json  101.json  1011.json  1013.json  1014.json  1018.json  1019.json  1021.json  1024.json  1025.json  1027.json  1034.json  1038.json  1040.json  1043.json  1046.json  1047.json  1050.json  1052.json  1059.json  1062.json  1065.json  1067.json  1068.json  1070.json  1072.json  1073.json  1074.json  1076.json  1077.json  108.json  1083.json  (+9794 more)
website/public/genres/: 2-step garage.json  A cappella.json  Acid (electronic music).json  Acid house.json  Acid jazz.json  Acid rock.json  Acid techno.json  Acid trance.json  Acoustic music.json  Adult album alternative.json  Adult contemporary music.json  African blues.json  African heavy metal.json  African hip-hop.json  African hip-hop❏Street pop.json  Afro (genre).json  Afro fusion.json  Afro house.json  Afro tech.json  Afro-Caribbean music.json  Afro-Cuban jazz.json  Afro-punk.json  Afro-soul.json  Afrobeat.json  Afrobeats.json  Afroswing.json  Afro⧸cosmic music.json  Ahidus.json  Ahwash.json  Aita (Morocco).json  Akishibu-kei.json  Al Jeel.json  Al jeel.json  Alaskan hip-hop.json  Albanian iso-polyphony.json  Alpine folk music.json  Alternative R&B.json  Alternative country.json  Alternative dance.json  Alternative hip-hop.json  (+1362 more)
website/src/: App.tsx  Graph.tsx  Links.tsx  Search.tsx  Settings.tsx  SimulationParams.tsx  StyledLink.tsx  Wikipedia.tsx  commit.json  data.tsx  graph.css  main.tsx  settings.tsx  tailwind.css  theme.tsx  util.test.ts  util.ts
website/src/components/: Blockquote.tsx  Collapsible.tsx  Footnote.tsx  Input.tsx  Notice.tsx  YouTubeEmbed.tsx
website/src/services/: artistCache.ts  dataCache.ts  genreCache.ts  search.ts
website/src/sidebar/: FAQ.tsx  ProjectInformation.tsx  SelectedNodeInfo.tsx  Settings.tsx  Sidebar.tsx
website/tests/: wikitext.ts
wikitext_simplified/: Cargo.toml
wikitext_simplified/src/: lib.rs
wikitext_util/src/: lib.rs
(+137 files in other folders)
