[package]
name = "datagen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bzip2 = "0.6.0"
image = { version = "0.25.1", features = [
    "png",
    "ico",
], default-features = false }
jiff = { version = "0.1.29", features = ["serde"] }
memmap2 = "0.9.5"
open = "5.3.2"
quick-xml = "0.37.2"
rayon = "1.10.0"
serde_json = "1.0.138"
toml = "0.8.19"

serde = { workspace = true }
wikitext_util = { workspace = true }
flate2 = "1.1.2"

shared = { path = "../shared" }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
