[package]
name = "wikitext_simplified"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
parse-wiki-text-2 = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
tsify-next = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

wikitext_util = { path = "../wikitext_util" }
